# directlfq

./: .bumpversion.toml  .gitignore  01_diff_analysis_manager.ipynb  01_lfq_manager.ipynb  02_normalization.ipynb  03_protein_intensity_estimation.ipynb  03_trace_shifting.ipynb  04_utils.ipynb  06_diffquant_utils.ipynb  06_visualizations.ipynb  12_benchmarking.ipynb  13_testfile_handling.ipynb  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  index.ipynb  nbdev.yml  pyproject.toml  settings.ini  setup.py  sidebar.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: all_tests.yml  build_windows_package.yml  create_release.yml  deploy.yaml  main.yml  nbdev_test_new.yml  nbdev_tests.yaml  nbdev_tests.yml  pip_installation.yml  publish_and_release.yml  publish_docker_image.yml  publish_on_pypi.yml  quick_tests.yml  quick_tests_ubuntu.yml  ratio_tests.yml
directlfq/: __init__.py  _modidx.py  _nbdev.py  benchmarking.py  cli.py  config.py  dashboard_parts.py  diff_analysis_manager.py  diffquant_utils.py  gui.py  gui_textfields.py  lfq_manager.py  normalization.py  orphan_remover.ipynb  orphan_remover.py  protein_intensity_estimation.py  test_utils.py  testfile_handling.py  trace_shifting.py  utils.py  utils_fileread.py  visualizations.py
directlfq/configs/: download_links_for_testfiles_all.yaml  download_links_for_testfiles_quicktest.yaml  intable_config.yaml  interface_parameters.json  spectronaut_tableconfig_fragion.rs  spectronaut_tableconfig_precursor.rs  spectronaut_tableconfig_ptm_fragion.rs
docs/: _config.yml  normalization.html  sidebar.json
docs/_data/: topnav.yml
iq_comparison/: run_iq.R
misc/: .bumpversion.cfg  bumpversion.cfg  check_version.sh  loose_pip_install.sh  pip_install.sh  stable_pip_install.sh
nbdev_nbs/: 01_lfq_manager.ipynb  02_normalization.ipynb  03_protein_intensity_estimation.ipynb  04_utils.ipynb  05_visualizations.ipynb  06_benchmarking.ipynb  07_testfile_handling.ipynb  08_tracefilter.ipynb  sidebar.yml
requirements/: requirements.txt  requirements_dask.txt  requirements_dask_loose.txt  requirements_development.txt  requirements_gui.txt  requirements_gui_loose.txt  requirements_loose.txt  requirements_tests.txt
test_data/: .sync_journal.db-shm
tests/: download_testfiles.py  run_quicktests.sh  run_ratio_tests.sh  run_tests.sh  test_cli.py  test_gui.py
(+125 files in other folders)
